<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:text="sth"
        android:textSize="20sp"
        android:textColor="@color/black"/>
    <RelativeLayout
        android:id="@+id/info1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name">
        <TextView
            android:id="@+id/secondLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vender"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            android:layout_marginLeft="3dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/vender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="sth"
            android:textSize="20sp"
            android:layout_marginRight="3dp"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/info2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info1"
        android:layout_marginTop="-1dp">
        <TextView
            android:id="@+id/thirdLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            android:layout_marginLeft="3dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="sth"
            android:textSize="20sp"
            android:layout_marginRight="3dp"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/info3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info2"
        android:layout_marginTop="-1dp">
        <TextView
            android:id="@+id/fourthLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intType"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            android:layout_marginLeft="3dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/intType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="sth"
            android:textSize="20sp"
            android:layout_marginRight="3dp"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/info4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info3"
        android:layout_marginTop="-1dp">
        <TextView
            android:id="@+id/fourthLine1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringType"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            android:layout_marginLeft="3dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/stringType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="sth"
            android:textSize="20sp"
            android:layout_marginRight="3dp"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/info5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info4"
        android:layout_marginTop="-1dp">
        <TextView
            android:id="@+id/fifthLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxRange"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            android:layout_marginLeft="3dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/maxRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="sth"
            android:textSize="20sp"
            android:layout_marginRight="3dp"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/info6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info5"
        android:layout_marginTop="-1dp">
        <TextView
            android:id="@+id/sixthLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resolution"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            android:layout_marginLeft="3dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="sth"
            android:textSize="20sp"
            android:layout_marginRight="3dp"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/info7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info6"
        android:layout_marginTop="-1dp">
        <TextView
            android:id="@+id/seventhLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            android:layout_marginLeft="3dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="sth"
            android:textSize="20sp"
            android:layout_marginRight="3dp"
            android:textColor="@color/black"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/info8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info7"
        android:layout_marginTop="-1dp">
        <TextView
            android:id="@+id/eighthLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minDelay"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            android:layout_marginLeft="3dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/minDelay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="sth"
            android:textSize="20sp"
            android:layout_marginRight="3dp"
            android:textColor="@color/black"/>
    </RelativeLayout>

</RelativeLayout>